[gd_scene load_steps=13 format=2]

[ext_resource path="res://assets/images/game-logo.png" type="Texture" id=1]
[ext_resource path="res://assets/fonts/BLKCHCRY.TTF" type="DynamicFontData" id=2]
[ext_resource path="res://src/UI/Buttons/ContinueButton.tscn" type="PackedScene" id=3]
[ext_resource path="res://src/UI/Buttons/NewGameButton.tscn" type="PackedScene" id=4]
[ext_resource path="res://assets/sounds/intro_music.wav" type="AudioStream" id=5]
[ext_resource path="res://src/UI/FadeIn.tscn" type="PackedScene" id=7]
[ext_resource path="res://src/UI/TitleScreen.gd" type="Script" id=8]
[ext_resource path="res://src/UI/FadeOut.tscn" type="PackedScene" id=9]
[ext_resource path="res://src/UI/Buttons/ExitButton.tscn" type="PackedScene" id=10]

[sub_resource type="DynamicFont" id=1]
size = 25
extra_spacing_char = 3
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=2]
size = 32
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=3]
size = 32
font_data = ExtResource( 2 )

[node name="TitleScreen" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 1.41418
margin_top = 4.24265
margin_right = 1.41418
margin_bottom = 4.24268
script = ExtResource( 8 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Menu" type="VBoxContainer" parent="."]
margin_left = 120.0
margin_top = 80.0
margin_right = 1080.0
margin_bottom = 720.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Logo" type="TextureRect" parent="Menu"]
margin_right = 960.0
margin_bottom = 124.0
texture = ExtResource( 1 )
stretch_mode = 4

[node name="CenterRow" type="HBoxContainer" parent="Menu"]
margin_top = 128.0
margin_right = 960.0
margin_bottom = 432.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Buttons" type="VBoxContainer" parent="Menu/CenterRow"]
margin_right = 478.0
margin_bottom = 304.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 20
alignment = 1

[node name="NewGameButton" parent="Menu/CenterRow/Buttons" instance=ExtResource( 4 )]
anchor_right = 0.0
margin_top = 42.0
margin_right = 478.0
margin_bottom = 102.0
shortcut_in_tooltip = false
scene_to_load = "res://src/Levels/MainGame.tscn"

[node name="ContinueButton" parent="Menu/CenterRow/Buttons" instance=ExtResource( 3 )]
anchor_right = 0.0
margin_top = 122.0
margin_right = 478.0
margin_bottom = 182.0
action_mode = 1

[node name="ExitButton" parent="Menu/CenterRow/Buttons" instance=ExtResource( 10 )]
anchor_right = 0.0
margin_top = 202.0
margin_right = 478.0
margin_bottom = 262.0
mouse_default_cursor_shape = 2

[node name="CenterContainer" type="CenterContainer" parent="Menu/CenterRow"]
margin_left = 482.0
margin_right = 960.0
margin_bottom = 32.0
size_flags_horizontal = 3
size_flags_vertical = 0

[node name="Label" type="Label" parent="Menu/CenterRow/CenterContainer"]
margin_left = 73.0
margin_right = 404.0
margin_bottom = 32.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color_shadow = Color( 0.313726, 0.117647, 0.203922, 1 )
custom_constants/shadow_offset_x = 0
custom_constants/shadow_offset_y = 4
text = "Created by PureFour v0.1"

[node name="SoundSliders" type="VBoxContainer" parent="Menu"]
margin_left = 760.0
margin_top = 436.0
margin_right = 960.0
margin_bottom = 640.0
size_flags_horizontal = 12
size_flags_vertical = 4

[node name="Music" type="Control" parent="Menu/SoundSliders"]
margin_right = 200.0
margin_bottom = 100.0
rect_min_size = Vector2( 200, 100 )

[node name="Slider" type="HSlider" parent="Menu/SoundSliders/Music"]
margin_top = -20.0
margin_right = 190.0
mouse_default_cursor_shape = 2
min_value = -40.0
max_value = 0.0
step = 0.5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Menu/SoundSliders/Music"]
custom_fonts/font = SubResource( 2 )
custom_colors/font_color_shadow = Color( 0.313726, 0.117647, 0.203922, 1 )
custom_constants/shadow_offset_x = 0
custom_constants/shadow_offset_y = 4
text = "Music Volume"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SFX" type="Control" parent="Menu/SoundSliders"]
margin_top = 104.0
margin_right = 200.0
margin_bottom = 204.0
rect_min_size = Vector2( 200, 100 )

[node name="Slider" type="HSlider" parent="Menu/SoundSliders/SFX"]
margin_top = -20.0
margin_right = 190.0
rect_min_size = Vector2( 190, 20 )
mouse_default_cursor_shape = 2
min_value = -40.0
max_value = 0.0
step = 0.5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Menu/SoundSliders/SFX"]
margin_right = 40.0
margin_bottom = 14.0
custom_fonts/font = SubResource( 3 )
custom_colors/font_color_shadow = Color( 0.313726, 0.117647, 0.203922, 1 )
custom_constants/shadow_offset_x = 0
custom_constants/shadow_offset_y = 4
text = "SFX  Volume"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="FadeOut" parent="." instance=ExtResource( 9 )]
mouse_filter = 2

[node name="FadeIn" parent="." instance=ExtResource( 7 )]
visible = false
mouse_filter = 2

[node name="IntroMusic" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )
volume_db = -10.0
autoplay = true
[connection signal="value_changed" from="Menu/SoundSliders/Music/Slider" to="." method="_on_SliderMusic_value_changed"]
[connection signal="value_changed" from="Menu/SoundSliders/SFX/Slider" to="." method="_on_SliderEffects_value_changed"]
[connection signal="fade_in_finished" from="FadeIn" to="." method="_on_FadeIn_fade_in_finished"]
